--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "lodash": "^4.6.1",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.4.2",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
     "react-redux": "^4.0.0",
     "redux": "^3.0.2",
     "webpack": "^1.10.1"
@@ -37,22 +37,23 @@
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.7.2",
-    "babel-eslint": "^5.0.0",
+    "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
-    "babel-plugin-webpack-loaders": "^0.3.10",
+    "babel-plugin-webpack-loaders": "^0.4.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-tape-runner": "^2.0.1",
     "css-loader": "^0.23.1",
     "eslint": "^2.4.0",
-    "eslint-config-airbnb": "6.1.0",
+    "eslint-config-airbnb": "7.0.0",
     "eslint-loader": "^1.0.0",
-    "eslint-plugin-react": "^4.2.3",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
+    "eslint-plugin-react": "^5.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "faucet": "0.0.1",
     "file-loader": "^0.8.4",
-    "react-addons-test-utils": "^0.14.7",
+    "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.2.8",
     "sass-loader": "^3.2.0",
     "scss-lint-loader": "^1.0.1",
