--- a/package.json
+++ b/package.json
@@ -46,18 +46,18 @@
     "babel-tape-runner": "^2.0.1",
     "css-loader": "^0.23.1",
     "eslint": "^2.4.0",
-    "eslint-config-airbnb": "7.0.0",
+    "eslint-config-airbnb": "^7.0.0",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
-    "eslint-plugin-react": "^5.0.1",
+    "eslint-plugin-react": "^4.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "faucet": "0.0.1",
     "file-loader": "^0.8.4",
     "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.2.8",
     "sass-loader": "^3.2.0",
-    "scss-lint-loader": "^1.0.1",
     "style-loader": "^0.13.0",
+    "stylelint-webpack-plugin": "^0.2.0",
     "tape": "^4.5.1",
     "url-loader": "^0.5.6",
     "webpack-dev-server": "^1.10.1",
