--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "faucet": "0.0.1",
     "file-loader": "^0.8.4",
+    "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-stylus": "^2.4.0",
     "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.2.8",
     "sass-loader": "^3.2.0",
