--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.0.0",
+    "react-router": "^2.4.1",
     "redux": "^3.0.2",
     "webpack": "^1.10.1"
   },
@@ -40,7 +41,7 @@
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-webpack-loaders": "^0.4.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-tape-runner": "^2.0.1",
