--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "parser": "babel-eslint",
   "rules": {
     "comma-dangle": 0,
+    "spaced-comment": 0,
     "no-unused-vars": [2, {     // http://eslint.org/docs/rules/no-unused-vars
       "vars": "local",
       "args": "after-used",
