--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.4.0",
+    "leaflet": "^0.7.7",
     "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.2.8",
+    "react-leaflet": "^0.11.7",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "stylelint-webpack-plugin": "^0.2.0",
