--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "estraverse-fb": "^1.3.1",
     "lodash": "^4.6.1",
+    "lodash.flattendeep": "^4.2.0",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.4.2",
     "react": "^15.0.1",
