--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^4.0.0",
     "react-router": "^2.4.1",
     "redux": "^3.0.2",
+    "redux-thunk": "^2.1.0",
     "webpack": "^1.10.1"
   },
   "devDependencies": {
