--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,9 @@
   "rules": {
     "comma-dangle": 0,
     "spaced-comment": 0,
+    "no-console": 0,
+    "global-require": 0,
+    "object-shorthand": 0,
     "no-unused-vars": [2, {     // http://eslint.org/docs/rules/no-unused-vars
       "vars": "local",
       "args": "after-used",
