--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "estraverse-fb": "^1.3.1",
     "lodash": "^4.6.1",
+    "lodash.find": "^4.4.0",
     "lodash.flattendeep": "^4.2.0",
     "lodash.isempty": "^4.2.1",
     "node-libs-browser": "^1.0.0",
