--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "estraverse-fb": "^1.3.1",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.6.1",
     "lodash.find": "^4.4.0",
     "lodash.flattendeep": "^4.2.0",
