--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash.find": "^4.4.0",
     "lodash.flattendeep": "^4.2.0",
     "lodash.isempty": "^4.2.1",
+    "lodash.once": "^4.0.0",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.4.2",
     "react": "^15.0.1",
