--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "estraverse-fb": "^1.3.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.6.1",
+    "lodash.compact": "^3.0.1",
     "lodash.find": "^4.4.0",
     "lodash.flattendeep": "^4.2.0",
     "lodash.isempty": "^4.2.1",
