--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "no-console": 0,
     "global-require": 0,
     "object-shorthand": 0,
+    "nonew": 0,
     "no-unused-vars": [2, {     // http://eslint.org/docs/rules/no-unused-vars
       "vars": "local",
       "args": "after-used",
