Compilation of Stylus via Webpack instead of Gulp
- Hot Loading works for CSS also
- Compiles with autoprefixer
- Configured production webpack config with Extract Text Plugin for
compiled css build.
- Setting `process.env.NODE_ENV` to ‘production’ disables React’s
warnings about compressed development version.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack": "^1.10.1"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.7.2",
     "babel-eslint": "^6.0.2",
@@ -48,6 +49,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-tape-runner": "^2.0.1",
+    "bloodhound-js": "^1.2.1",
     "css-loader": "^0.23.1",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^7.0.0",
@@ -60,13 +62,18 @@
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.4.0",
+    "json-loader": "^0.5.4",
     "leaflet": "^0.7.7",
+    "lodash.filter": "^4.4.0",
+    "lodash.throttle": "^4.0.1",
+    "poststylus": "^0.2.3",
     "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.2.8",
     "react-leaflet": "^0.11.7",
     "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.0",
+    "style-loader": "^0.13.1",
     "stylelint-webpack-plugin": "^0.2.0",
+    "stylus-loader": "^2.1.1",
     "tape": "^4.5.1",
     "url-loader": "^0.5.6",
     "webpack-dev-server": "^1.10.1",
