--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash.find": "^4.4.0",
     "lodash.flattendeep": "^4.2.0",
     "lodash.isempty": "^4.2.1",
+    "lodash.keys": "^4.0.7",
     "lodash.once": "^4.0.0",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.4.2",
