--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "leaflet": "^0.7.7",
     "lodash.filter": "^4.4.0",
     "lodash.throttle": "^4.0.1",
+    "lodash.uniq": "^4.3.0",
     "poststylus": "^0.2.3",
     "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.2.8",
