--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "estraverse-fb": "^1.3.1",
+    "isarray": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.6.1",
     "lodash.compact": "^3.0.1",
