--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "webpack -p --config webpack/webpack-production.config.js",
+    "production": "npm run build && node server.js production",
     "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 babel-tape-runner source/**/*.spec.js | faucet"
   },
   "keywords": [
@@ -25,6 +26,7 @@
   "license": "ISC",
   "dependencies": {
     "estraverse-fb": "^1.3.1",
+    "express": "^4.14.0",
     "isarray": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.6.1",
