--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-router": "^2.4.1",
     "redux": "^3.0.2",
     "redux-thunk": "^2.1.0",
-    "webpack": "^1.10.1"
+    "webpack": "^1.10.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
