also trying this

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scaffold",
   "version": "0.1.0",
   "engines": {
-      "npm": "3.8.9",
+      "npm": "3.8.9"
   },
   "description": "A scaffold for creative front end web development",
   "main": "index.js",
