--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node server.js",
     "build": "webpack -p --config webpack/webpack-production.config.js",
     "production": "npm run build && node server.js production",
-    "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 babel-tape-runner source/**/*.spec.js | faucet"
+    "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 babel-tape-runner source/**/*.spec.js | faucet",
+    "postinstall": "npm run build"
   },
   "keywords": [
     "scaffold",
