--- a/package.json
+++ b/package.json
@@ -48,9 +48,7 @@
     "redux": "^3.0.2",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.10.1",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^1.14.1",
     "autoprefixer": "^6.3.6",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.7.2",
