--- a/package.json
+++ b/package.json
@@ -29,26 +29,6 @@
   "author": "Nate Bailey",
   "license": "ISC",
   "dependencies": {
-    "estraverse-fb": "^1.3.1",
-    "express": "^4.14.0",
-    "isarray": "^1.0.0",
-    "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.6.1",
-    "lodash.compact": "^3.0.1",
-    "lodash.find": "^4.4.0",
-    "lodash.flattendeep": "^4.2.0",
-    "lodash.isempty": "^4.2.1",
-    "lodash.once": "^4.0.0",
-    "node-libs-browser": "^1.0.0",
-    "node-sass": "^3.4.2",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-redux": "^4.0.0",
-    "react-router": "^2.4.1",
-    "redux": "^3.0.2",
-    "redux-thunk": "^2.1.0",
-    "webpack": "^1.10.1",
-    "webpack-dev-server": "^1.14.1",
     "autoprefixer": "^6.3.6",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.7.2",
@@ -66,28 +46,49 @@
     "eslint-loader": "^1.0.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^4.3.0",
+    "estraverse-fb": "^1.3.1",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "faucet": "0.0.1",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.4.0",
+    "isarray": "^1.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "leaflet": "^0.7.7",
+    "lodash": "^4.6.1",
+    "lodash.assign": "^4.0.9",
+    "lodash.compact": "^3.0.1",
     "lodash.filter": "^4.4.0",
+    "lodash.find": "^4.4.0",
+    "lodash.flattendeep": "^4.2.0",
+    "lodash.isempty": "^4.2.1",
+    "lodash.once": "^4.0.0",
     "lodash.throttle": "^4.0.1",
     "lodash.uniq": "^4.3.0",
+    "memory-cache": "^0.1.6",
+    "node-libs-browser": "^1.0.0",
+    "node-sass": "^3.4.2",
     "poststylus": "^0.2.3",
+    "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
+    "react-dom": "^15.0.1",
     "react-hot-loader": "^1.2.8",
     "react-leaflet": "^0.11.7",
+    "react-redux": "^4.0.0",
+    "react-router": "^2.4.1",
+    "redux": "^3.0.2",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "stylelint-webpack-plugin": "^0.2.0",
     "stylus-loader": "^2.1.1",
     "tape": "^4.5.1",
     "url-loader": "^0.5.6",
-    "webpack-notifier": "^1.2.1",
-    "lodash.assign": "^4.0.9"
+    "webpack": "^1.10.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-notifier": "^1.2.1"
   }
 }
