--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "lodash.find": "^4.4.0",
     "lodash.flattendeep": "^4.2.0",
     "lodash.isempty": "^4.2.1",
+    "lodash.keys": "^4.0.7",
     "lodash.once": "^4.0.0",
     "lodash.throttle": "^4.0.1",
     "lodash.uniq": "^4.3.0",
