--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "lodash.filter": "^4.4.0",
     "lodash.find": "^4.4.0",
     "lodash.flattendeep": "^4.2.0",
+    "lodash.isarray": "^4.0.0",
     "lodash.isempty": "^4.2.1",
     "lodash.keys": "^4.0.7",
     "lodash.once": "^4.0.0",
