--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-tape-runner": "^2.0.1",
+    "baffle": "^0.3.5",
     "bloodhound-js": "^1.2.1",
     "css-loader": "^0.23.1",
     "eslint": "^2.4.0",
