--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.4.0",
+    "html-loader": "^0.4.3",
     "isarray": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
@@ -71,6 +72,7 @@
     "lodash.once": "^4.0.0",
     "lodash.throttle": "^4.0.1",
     "lodash.uniq": "^4.3.0",
+    "markdown-loader": "^0.1.7",
     "memory-cache": "^0.1.6",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.4.2",
@@ -81,6 +83,7 @@
     "react-hot-loader": "^1.2.8",
     "react-leaflet": "^0.11.7",
     "react-redux": "^4.0.0",
+    "react-remarkable": "^1.1.1",
     "react-router": "^2.4.1",
     "redux": "^3.0.2",
     "redux-thunk": "^2.1.0",
