--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "faucet": "0.0.1",
     "file-loader": "^0.8.4",
+    "geojson-flatten": "^0.2.1",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.4.0",
