--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-redux": "^4.0.0",
     "react-remarkable": "^1.1.1",
     "react-router": "^2.4.1",
+    "react-tooltip": "^3.1.8",
     "redux": "^3.0.2",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
