--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "scaffold",
+  "name": "africanelephantdatabase",
   "version": "0.1.0",
   "engines": {
     "npm": "3.8.9"
   },
-  "description": "A scaffold for creative front end web development",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AfESG/AEDWebsite2016"
+  },
+  "description": "African Elephant Database Front End 2016",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
