--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "public/narratives"]
 	path = public/narratives
-	url = https://github.com/AfESG/AEDNarratives.git
+	url = git://github.com/AfESG/AEDNarratives.git
